--- a/HaRepacker/Properties/Resources.zh-CHT.resx
+++ b/HaRepacker/Properties/Resources.zh-CHT.resx
@@ -136,7 +136,7 @@
     <value>新楓之谷/冒险岛Online/메이플스토리/MapleSEA(舊)</value>
   </data>
   <data name="EncTypeNone" xml:space="preserve">
-    <value>MapleStory/MapleSEA/メイプルストーリー</value>
+    <value>BMS / GMS / MapleSEA / メイプルストーリー / 메이플스토리</value>
   </data>
   <data name="EnterValidInput" xml:space="preserve">
     <value>請輸入有效的內容</value>
@@ -240,7 +240,7 @@
     <value>無法打開WZ檔案 "{0}"</value>
   </data>
   <data name="MainErrorImportingWzImageFile" xml:space="preserve">
-    <value>Error importing {0}.img file. Are you sure you have selected the correct WZ encryption?</value>
+    <value>導入{0} .img文件時出錯。 你確定你選擇了正確的WZ加密嗎？</value>
   </data>
   <data name="MainHelpOpenFail" xml:space="preserve">
     <value>無法顯示幫助, 因為找不到幫助檔案({0})</value>
@@ -269,7 +269,7 @@
     <value>新版本</value>
   </data>
   <data name="MainWzExportError" xml:space="preserve">
-    <value>Export directory not found. Please specify it under Tools -&gt; Options</value>
+    <value>導出目錄未找到。 請在工具 - &gt;選項下指定它</value>
   </data>
   <data name="Mp3Filter" xml:space="preserve">
     <value>MPEG-1 Audio Layer 3 (*.mp3)</value>
@@ -320,7 +320,7 @@
     <value>WZ檔案 (*.wz)</value>
   </data>
   <data name="WzImgFilter" xml:space="preserve">
-    <value>WZ Image Files (*.img)</value>
+    <value>WZ 圖像文件 (*.img)</value>
   </data>
   <data name="XmlFilter" xml:space="preserve">
     <value>eXtended Markup Language (*.xml)</value>
